* Add price_list field into franchise form

Version 3.4.0 - 2015-11-11

* Initial release